@startuml

class Tablero {
    + Tablero(tamanioHorizontal : int, tamanioVertical : int)
    + construir(construccion : Edificio, coord : Coordenadas)
    + asignarUnidad(zangano : Zangano, coord : Coordenadas)
    + actualizarTerreno(coord : Coordenadas, radio : int, terreno : Terreno)
    + cargarTerreno(coord : Coordenadas)
    + descargarTerreno(coord : Coordenadas)
    + desocuparNodo(coord : Coordenadas)
}

class Nodo {
    + Nodo(terreno : Terreno, recurso : NodoRecurso)
    + construir(construccion : Edificio)
    + asignarUnidad(zangano : Zangano)
    + actualizarTerrenoCon(terreno : Terreno)
    + cargarTerreno()
    + descargarTerreno()
    + desocuparNodo()
}

interface NodoEstado {
    + construir(construccion : Edificio) : NodoEstado
    + actualizar(unTerreno : Terreno, otroTerreno : Terreno)
    + desocuparNodo() : NodoEstado
}
class NodoVacio {
    + construir(construccion : Edificio) : NodoEstado
    + actualizar(unTerreno : Terreno, otroTerreno : Terreno) : Terreno
    + desocuparNodo() : NodoEstado
}
class NodoOcupado {
    - ocupa : Edificio
    + construir(construccion : Edificio) : NodoEstado
    + actualizar(unTerreno : Terreno, otroTerreno : Terreno) : Terreno
    + desocuparNodo() : NodoEstado
}

interface Terreno {
    + igualA(otroTerreno : Terreno) : Bool
    + actualizarTerreno(terreno : Terreno) : Terreno
    + cargarTerreno() : Terreno
    + descargarTerreno() : Terreno
}
class Energia {
    cantidad : int
    + igualA(otroTerreno : Terreno) : Bool
    + actualizarTerreno(terreno : Terreno) : Terreno
    + cargarTerreno() : Terreno
    + descargarTerreno() : Terreno
}
class Moho {
    + igualA(otroTerreno : Terreno) : Bool
    + actualizarTerreno(terreno : Terreno) : Terreno
    + cargarTerreno() : Terreno
    + descargarTerreno() : Terreno
}
class Neutro {
    + igualA(otroTerreno : Terreno) : Bool
    + actualizarTerreno(terreno : Terreno) : Terreno
    + cargarTerreno() : Terreno
    + descargarTerreno() : Terreno
}

interface NodoRecurso {
    + igualA(otroRecurso : Recurso) : Bool
    + extraer(cantidad : int) : int
}
class SinRecurso {
    + igualA(otroRecurso : Recurso) : Bool
    + extraer(cantidad : int) : int
}
class NodoMineral {
    - cantidad : int
    + NodoMineral(cantidad : int)
    + igualA(otroRecurso : Recurso) : Bool
    + extraer(cantidad : int) : int
}
class VolcanGasVespeno {
    - cantidad : int
    + VolcanGasVespeno(cantidad : int)
    + igualA(otroRecurso : Recurso) : Bool
    + extraer(cantidad : int) : int
}

Tablero *-- "*" Nodo

NodoEstado <|.. NodoVacio
NodoEstado <|.. NodoOcupado

Nodo --> NodoEstado
Nodo -left> Terreno
Nodo -right> NodoRecurso

Terreno <|.left. Energia
Terreno <|.. Moho
Terreno <|.. Neutro

NodoRecurso <|.. SinRecurso
NodoRecurso <|.. NodoMineral
NodoRecurso <|.right. VolcanGasVespeno

@enduml